Add new pages and update navigation links

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
         </ul>
-     </nav>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my website where I showcase my projects.</p>
+     </nav>     
+    <h1>My Portfolio</h1>
+    <p>Here is where I will showcase my projects.</p>
 </body>
 </html>
