Update text on all pages

--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
             <li><a href="education.html">Education</a></li>
         </ul>
      </nav>     
-    <h1>My Portfolio</h1>
-    <p>Here is where I will showcase my projects.</p>
+    <h1>My Education</h1>
+    <p>This shares my education and experiences.</p>
 </body>
 </html>
