--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,6 @@
         </ul>
      </nav>     
     <h1>My Portfolio</h1>
-    <p>Here is where I will showcase my projects.</p>
+    <p>All my projects will be here</p>
 </body>
 </html>
