--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <li><a href="education.html">Education</a></li>
         </ul>
      </nav>     
-    <h1>My Portfolio</h1>
-    <p>Here is where I will showcase my projects.</p>
+    <h1>About Me</h1>
+    <p>This is about me.</p>
 </body>
 </html>
