--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,8 +14,27 @@
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
         </ul>
-     </nav>     
-    <h1>About Me</h1>
-    <p>This is about me.</p>
+    </nav>
+
+    <section class="about">
+        <div class="about-container">
+            <h1>About</h1>
+            <p class="about-intro">I'm a [Your Profession] based in [Your Location].</p>
+            <p class="about-description">
+                Since [Year], I’ve enjoyed turning complex problems into simple, beautiful, and intuitive designs. 
+                When I’m not working, you’ll find me [Your Hobbies].
+            </p>
+            <img src="profile.jpg" alt="Your Profile Picture" class="profile-pic">
+        </div>
+    </section>
+
+    <footer>
+        <ul class="social-links">
+            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+            <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com" target="_blank">GitHub</a></li>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
