Add about me and profile picture

--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@
     <section class="about">
         <div class="about-container">
             <h1>About</h1>
-            <p class="about-intro">I'm a [Your Profession] based in [Your Location].</p>
+            <p class="about-intro">I'm a Computer Science major with a spezialization in Cybersecurity based in Scottsdale and Tempe AZ.</p>
             <p class="about-description">
-                Since [Year], I’ve enjoyed turning complex problems into simple, beautiful, and intuitive designs. 
-                When I’m not working, you’ll find me [Your Hobbies].
+                Expecting to graduate in Spring 2026, I’ve enjoyed turning complex problems into simple, beautiful, and intuitive designs. 
+                When I’m not working, you’ll find me in the Crossfit gym getting ready for a competition or out by the pool trying to get a tan.
             </p>
-            <img src="profile.jpg" alt="Your Profile Picture" class="profile-pic">
+            <img src="IMG_5730.JPG" alt="Your Profile Picture" class="profile-pic">
         </div>
     </section>
 
