Add script.js for nav bar behavior, color change effect, and white boxes around text

--- a/education.html
+++ b/education.html
@@ -17,5 +17,6 @@
      </nav>     
     <h1>My Education</h1>
     <p>This shares my education and experiences.</p>
+    <script src="script.js"></script>
 </body>
 </html>
