--- a/about.html
+++ b/about.html
@@ -36,5 +36,6 @@
             <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
