--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
      </nav>
     <h1>Welcome to My Portfolio</h1>
     <p>This is my website where I showcase my projects.</p>
+    <script src="script.js"></script>
 </body>
 </html>
