--- a/portfolio.html
+++ b/portfolio.html
@@ -17,5 +17,6 @@
      </nav>     
     <h1>My Portfolio</h1>
     <p>All my projects will be here</p>
+    <script src="script.js"></script>
 </body>
 </html>
