Finished background, brought everything else forward on display

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="gradient-bg">
+        <div class="gradients-container">
+            <div class="g1"></div>
+            <div class="g2"></div>
+            <div class="g3"></div>
+            <div class="g4"></div>
+            <div class="g5"></div>
+            <div class="g6"></div>
+            <div class="interactive"></div>
+            
+        </div>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -15,8 +27,18 @@
             <li><a href="education.html">Education</a></li>
         </ul>
      </nav>
+     <div class = "about-container">
     <h1>Welcome to My Portfolio</h1>
     <p>This is my website where I showcase my projects.</p>
+    </div>
+    <footer>
+        <ul class="social-links">
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">GitHub</a></li>
+        </ul>
+    </footer>
+
     <script src="script.js"></script>
-</body>
+    </body>
 </html>
