--- a/about.html
+++ b/about.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="gradient-bg">
+        <div class="gradients-container">
+            <div class="g1"></div>
+            <div class="g2"></div>
+            <div class="g3"></div>
+            <div class="g4"></div>
+            <div class="g5"></div>
+            <div class="g6"></div>
+            <div class="interactive"></div> 
+            
+        </div>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -36,6 +48,6 @@
             <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
         </ul>
     </footer>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
