--- a/education.html
+++ b/education.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="gradient-bg">
+        <div class="gradients-container">
+            <div class="g1"></div>
+            <div class="g2"></div>
+            <div class="g3"></div>
+            <div class="g4"></div>
+            <div class="g5"></div>
+            <div class="g6"></div>
+            <div class="interactive"></div> 
+            
+        </div>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -15,8 +27,10 @@
             <li><a href="education.html">Education</a></li>
         </ul>
      </nav>     
+     <div class="about-container">
     <h1>My Education</h1>
     <p>This shares my education and experiences.</p>
-    <script src="script.js"></script>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
