--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="gradient-bg">
+        <div class="gradients-container">
+            <div class="g1"></div>
+            <div class="g2"></div>
+            <div class="g3"></div>
+            <div class="g4"></div>
+            <div class="g5"></div>
+            <div class="g6"></div>
+            <div class="interactive"></div> 
+            
+        </div>
+    </div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,6 +29,6 @@
      </nav>     
     <h1>My Portfolio</h1>
     <p>All my projects will be here</p>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
