updates to background orbs. Follow mouse

--- a/about.html
+++ b/about.html
@@ -48,6 +48,6 @@
             <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
         </ul>
     </footer>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
