--- a/education.html
+++ b/education.html
@@ -31,6 +31,6 @@
     <h1>My Education</h1>
     <p>This shares my education and experiences.</p>
     </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
