--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,6 @@
      </nav>     
     <h1>My Portfolio</h1>
     <p>All my projects will be here</p>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
