--- a/education.html
+++ b/education.html
@@ -25,6 +25,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
+            <li><a href="login.html" id="loginBtn">Login</a></li>
         </ul>
      </nav>     
      <div class="about-container">
