Edited Homepage and background

--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
             <div class="bg-shape2 bg-purple opacity-50 bg-blur" id="orb2"></div>
             <div class="bg-shape3 bg-primary opacity-50 bg-blur" id="orb3"></div>
         </div>
-        <div id="helloWorld" class="hello-world">
-            <h1>Hello World</h1>
-        </div>
     </div>
+    <div id="helloWorld" class="hello-world">
+        <h1>Hello World</h1>
+    </div>
+    <div class="front-page-scroll">
+        <p>Welcome to my personal website. I've added a few tabs in the navigation at the top to help show my different aspects.</p>
+        <p>I have a portfolio page that I am constantly adding new projects to. The portfolio page includes both school projects and personal projects and helps showcase the skills I've learned so far.</p>
+        <p>The about page shows a little about my background and skills in Computer Science but also shares what I do in my free time along with my areas of interest.</p>
+        <p>I also have a page dedicated to sharing updates on my education. While I am currently studying at Arizona State University, the education tab shares updates and celebrates my successes throughout my college career.</p>
+        <p>Lastly, I've added a login feature. I highly recommend adding an account. Creating an account helps show my ability to collect information and data. Your account info is then visible on the portfolio tab.</p>
+        <p>Creating an account is a project within the website.</p>
+    </div>
+    
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -26,14 +35,13 @@
             <li><a href="login.html" id="loginBtn">Login</a></li>
         </ul>
     </nav>
-    <footer>
+    <footer class="footer">
         <ul class="social-links">
             <li><a href="#">Twitter</a></li>
             <li><a href="#">LinkedIn</a></li>
             <li><a href="#">GitHub</a></li>
         </ul>
     </footer>
-
     <script src="script.js"></script>
 </body>
 
