--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,22 @@
             <li><a href="login.html" id="loginBtn">Login</a></li>
         </ul>
      </nav>     
-    <h1>My Portfolio</h1>
-    <p>All my projects will be here</p>
+    <div class="portfolio">
+        <div class="projectOne">
+            <div class="data-box">
+                <h3>Data Title 1</h3>
+                <p>This is some data.</p>
+            </div>
+            <div class="data-box">
+                <h3>Data Title 2</h3>
+                <p>This is more data.</p>
+            </div>
+            <div class="data-box">
+                <h3>Data Title 3</h3>
+                <p>This is even more data.</p>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
