changed wording on front page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         <h1>Hello World</h1>
     </div>
     <div class="front-page-scroll">
-        <p>Welcome to my personal website. I've added a few tabs in the navigation at the top to help show my different aspects.</p>
-        <p>I have a portfolio page that I am constantly adding new projects to. The portfolio page includes both school projects and personal projects and helps showcase the skills I've learned so far.</p>
-        <p>The about page shows a little about my background and skills in Computer Science but also shares what I do in my free time along with my areas of interest.</p>
-        <p>I also have a page dedicated to sharing updates on my education. While I am currently studying at Arizona State University, the education tab shares updates and celebrates my successes throughout my college career.</p>
-        <p>Lastly, I've added a login feature. I highly recommend adding an account. Creating an account helps show my ability to collect information and data. Your account info is then visible on the portfolio tab.</p>
-        <p>Creating an account is a project within the website.</p>
+        <p>Welcome to my website! I have created this website and am constantly making changes based on new knowledge that I have around coding.</p>
+        <p>There are different tabs at the top that share a little about me, different portfolio projects, and my education.</p>
+        <p>I also am working on adding a login page to showcase my skills using things like databases and platforms like MongoDB</p>
+        <p>I am constantly making changes as I learn more so keep an eye on my site.</p>
     </div>
     
     <nav>
